JSFUNIT-255 Create JSFUnit/Arquillian examples
git-svn-id: https://svn.jboss.org/repos/jsfunit/trunk@529 992343fe-802f-0410-85da-d31fbad5f0a6